--- a/VIM-Gradle/build.gradle
+++ b/VIM-Gradle/build.gradle
@@ -3,15 +3,16 @@ apply plugin: 'maven'
 apply plugin: 'eclipse-wtp'
 apply plugin: 'war'
 
-//apply plugin: 'sonar-runner'
+/*
+apply plugin: 'sonar-runner'
 
-//sonarRunner {
- //sonarProperties {
-   //property "sonar.projectName", "My Project Name"
-   //property "sonar.projectKey", "org.sonarqube:java-gradle-simple"
- //}
-//}
-
+sonarRunner {
+ sonarProperties {
+   property "sonar.projectName", "My Project Name"
+   property "sonar.projectKey", "org.sonarqube:java-gradle-simple"
+ }
+}
+*/
 
 group = 'com.cg'
 version = '0.0.1-SNAPSHOT'
