--- a/VIM-Gradle/build.gradle
+++ b/VIM-Gradle/build.gradle
@@ -4,14 +4,14 @@ apply plugin: 'eclipse-wtp'
 apply plugin: 'war'
 
 /*
-apply plugin: 'sonar-runner'
+//apply plugin: 'sonar-runner'
 
-sonarRunner {
- sonarProperties {
-   property "sonar.projectName", "My Project Name"
-   property "sonar.projectKey", "org.sonarqube:java-gradle-simple"
- }
-}
+//sonarRunner {
+// sonarProperties {
+//   property "sonar.projectName", "My Project Name"
+//   property "sonar.projectKey", "org.sonarqube:java-gradle-simple"
+// }
+//}
 */
 
 group = 'com.cg'
